# dataformat-bench

./: .gitignore  README.md  pyproject.toml  report.md
proto/: order.proto
src/dataformat_bench/: __init__.py  benchmark.py  cli.py  config.py  generator.py  read_benchmark.py  report.py  schema.py  write_benchmark.py
src/dataformat_bench/formats/: __init__.py  avro.py  base.py  parquet.py  protobuf.py
