[project]
name = "dataformat-bench"
version = "0.1.0"
description = "Performance benchmark for data formats: Parquet, Avro, Protobuf"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyarrow>=18.0.0",
    "pandas>=2.0.0",
    "fastavro>=1.9.0",
    "protobuf>=5.0.0",
    "click>=8.1.0",
    "faker>=30.0.0",
    "tqdm>=4.66.0",
    "tabulate>=0.9.0",
    "grpcio-tools>=1.60.0",
    "cramjam>=2.7.0",
]

[project.scripts]
dataformat-bench = "dataformat_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataformat_bench"]
